@@ -155,6 +155,10 @@ runtime.datasource.logStartupMetrics=true
 #Log number of aborted polls for a polling data source this often at a minimum (only logged after next aborted poll past this time)
 runtime.datasource.pollAbortedLogFrequency=3600000
 
+#Report Javascript Execution Times at INFO Level logging
+# add this to log4j.xml   <category name="org.perf4j.TimingLogger"><level value="info"/></category>
+runtime.javascript.metrics=false
+
 #Default task queue size for the Real Time Timer, should multiple tasks of the same type be queued up?
 # Tasks are rejected from a full queue, a size of 0 means reject multiple instances of the same task
 runtime.realTimeTimer.defaultTaskQueueSize=0
