@@ -1656,6 +1656,9 @@ event.rtn.pubDisabled=Publisher disabled
 event.rtn.shutdown=System shutdown
 event.rtn.unknown=Unknown inactive cause
 
+event.script.contextPointMissing=Point with id {1} for variable named ''{0}'' is missing
+event.script.contextPointDisabled=Point with id {1} for variable named ''{0}'' is disabled
+
 validate.nameRequired=Name is required
 validate.nameTooLong=Name cannot be longer than 40 characters
 validate.notLongerThan=Cannot be longer than {0} characters
